[metadata]
name = "mtls"
# version = attr: mtls.__version__
author = "Danny Grove"
author_email = "danny@drgrovellc.com"
description = "A short-lived certificate tool based on the Zero Trust network mode"
long_description = file: README.md
long_description_content_type = "text/markdown"
license = Apache-2.0
url = "https://github.com/drGrove/mtls-cli"
project_urls =
    Homepage = "https://github.com/drGrove/mtls-cli"
    Source = "https://github.com/drGrove/mtls-cli"
    Tracker = "https://github.com/drGrove/mtls-cli/issues"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
requires_dist = setuptools

[options]
zip_safe = True
python_requires = >=3.8, <4
package_dir =
    = src
packages = find:
install_requires =
    cryptography
    python-gnupg
    urllib3
    requests
    click
    pyOpenSSL

[options.package_data]
    mtls = share/*

[options.entry_points]
console_scripts =
    mtls = mtls.cli:cli

[options.packages.find]
where = src
exclude = test

[opions.extra_require]
test =
    coverage==6.2
    coveralls==3.3.1
    docker==5.0.3
pep8test =
    black==21.12b0
    flake8==4.0.1
sdist =
    setuptools_rust >= 4.0.1

[pycodestyle]
ignore = E501, E203, W503
