[options]
zip_safe = True
python_requires = >=3.8, <4
package_dir =
    = src
packages = find:
install_requires =
    cryptography
    python-gnupg
    urllib3
    requests
    click
    pyOpenSSL

[options.entry_points]
console_scripts =
    mtls = mtls.cli:cli

[options.packages.find]
where = src
exclude = test

[opions.extra_require]
test =
    coverage==6.2
    coveralls==3.3.1
    docker==5.0.3
pep8test =
    black==21.12b0
    flake8==4.0.1
sdist =
    setuptools_rust >= 4.0.1

[pycodestyle]
ignore = E501, E203, W503
